# Poke-Controller-Modified-Extension

./: .gitignore  Build-nuitka.ps1  ExecutePokeConModified-Extension.bat  ExecutePokeConModified-Extension.sh  LICENSE  README.md  UpdatePokeConModified-Extension.bat  changelog.txt  pyproject.toml  pyrightconfig.json  requirements-nuitka.txt  requirements.txt  ruff.toml
.github/workflows/: basedpyright.yml  build-nuitka-test.yml  ruff.yml
Docs/: developer-internal-architecture-ja.md  external-io-spec-ja.md  user-api-guide-ja.md
SerialController/: Camera.py  CommandLoader.py  Constant.py  DiscordNotify.py  ExternalTools.py  GuiAssets.py  ImageProcessing.py  KeyConfig.py  Keyboard.py  LineNotify.py  Menubar.py  PokeConDialogue.py  PokeConLogger.py  PokeConShowInfo.py  PokeConUpdateChecker.py  Settings.py  Utility.py  Window.py  file_handler.py  get_pokestatistics.py  text_redirector.py
SerialController/Commands/: CommandBase.py  Keys.py  McuCommandBase.py  ProController.py  PythonCommandBase.py  Sender.py  StickCommand.py  UnitCommand.py
SerialController/Commands/McuCommands/: AutoLeague.py  InfinityWatt.py  MashA.py  PickUpBerry.py
SerialController/Commands/PythonCommands/: Print-sample.py  Widget-sample.py
SerialController/Commands/PythonCommands/Samples/: AutoLeague.py  AutoRelease.py  Discord_Test.py  MashA.py  (+5 more)
SerialController/Controller/: ControllerBase.py  ProController.py  XinputController.py
SerialController/gui/: assets.py  controller.py
SerialController/profiles/default/: discord_token.ini  external_token.ini  line_token.ini  settings.ini
(+16 files in other folders)
